# 3DSSL-SS23_HairReconstruction

./: README.md
Short Hair Generation/: Hair_Generation.cpp  all_output_strand.ply
fusibile/: .gitignore  CMakeLists.txt  cameraGeometryUtils.h  displayUtils.h  fusibile.cu  globalstate.h  main.cpp  main.h  point_cloud.h  vector_operations.h
gipuma/: .gitignore  CMakeLists.txt  Costfunction.h  algorithmparameters.h  camera.h  cameraGeometryUtils.h  config.h  displayUtils.h  fileIoUtils.h  gipuma.cu  gipuma_original_file.cu  globalstate.h  line.h  lineMap_cu.h  lineRefinement.h  line_cu.h  line_map_visualization.cpp  linestate.h  main.cpp  main.h  projectionUtils.h  samplePoints.h
gipuma/scripts/: 97_frame_00005.sh  blender_line.sh  multiface.sh  multiface2.sh
hair_growing/: hair_growing.cpp
line_fusion/: CMakeLists.txt
line_fusion/lib/: LineFusion.hpp
line_fusion/pointclouds/: noisy_lines.ply
line_fusion/src/: LineFusion.cpp  main.cpp
orientation_fields/: .gitignore
orientation_fields/Hair_Orient2D/: CMakeLists.txt  Color.h  Im.hpp  MathUtils.hpp  Orient2D.hpp  OrientMap.hpp  Renderer.h  Vec.hpp  XForm.h  lineqn.h  main.cpp  main_nobodyrender.cpp  util.h  vec.h
